--- a/reactjs/src/components/SiderMenu/index.less
+++ b/reactjs/src/components/SiderMenu/index.less
@@ -32,7 +32,7 @@
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: #455A64;
+    background: #0080bb;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
 }
 
