Front-end-Table-and-pagination

--- a/reactjs/src/index.css
+++ b/reactjs/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.ant-btn-primary {
+    color: #fff;
+    background-color: #f8921d !important;
+    border-color: #f8921d !important;
+    text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+    -webkit-box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+    box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+}
