--- a/reactjs/src/index.css
+++ b/reactjs/src/index.css
@@ -28,3 +28,21 @@ body {
   background: coral !important;
   color: white;
 }
+
+.ant-tabs-nav .ant-tabs-tab-active {
+  color: #5b5f5e !important;
+  font-weight: 500;
+}
+
+
+body {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 15px !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  background-color: #fff;
+  -webkit-font-feature-settings: 'tnum', "tnum";
+  font-feature-settings: 'tnum', "tnum";
+}
