--- a/reactjs/src/scenes/Event/style.css
+++ b/reactjs/src/scenes/Event/style.css
@@ -1,6 +1,9 @@
 .bracketPipes {
-    margin-left: -1px;
+  margin-left: -1px;
+}
 
+.rowSpace {
+  margin: 5px 0px;
 }
 
 /* .bracketPipes:nth-child(odd){
